--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "route-parser": "^0.0.5",
     "uuid": "^3.2.1",
     "webpack-node-externals": "^1.6.0"
