--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "compression": "^1.7.1",
     "connect-pg-simple": "^4.2.1",
     "cookie-parser": "^1.4.3",
+    "date-fns": "^1.29.0",
     "db-migrate": "^0.10.2",
     "db-migrate-pg": "^0.2.5",
     "dotenv": "^4.0.0",
@@ -55,6 +56,7 @@
     "pg-promise": "^8.1.1",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
+    "react-day-picker": "^7.1.2",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
