--- a/package.json
+++ b/package.json
@@ -58,8 +58,11 @@
     "react": "^16.2.0",
     "react-day-picker": "^7.1.2",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "route-parser": "^0.0.5",
     "uuid": "^3.2.1",
     "webpack-node-externals": "^1.6.0"
