--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "assert": "^1.4.1",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0",
     "camelize": "^1.0.0",
@@ -53,7 +54,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "pg": "^7.4.1",
-    "pg-promise": "^8.1.1",
+    "pg-promise": "^7.5.4",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-day-picker": "^7.1.2",
