--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "redux-thunk": "^2.2.0",
     "route-parser": "^0.0.5",
     "uuid": "^3.2.1",
+    "velocity-react": "^1.3.3",
     "webpack-node-externals": "^1.6.0"
   },
   "browserslist": [
