--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "assert": "^1.4.1",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0",
     "camelize": "^1.0.0",
@@ -49,6 +50,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "i18next": "^10.5.0",
     "mocha-webpack": "^1.0.1",
     "partial.lenses": "^13.1.1",
     "passport": "^0.4.0",
